--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.23 13:08:39<br />
+<b>start</b> - 2023.02.24 01:10:09<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -34.99000000000001<br />
+Hungary_VotiveChurch, not updated, -33.96000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.0<br />
+USA_LighteksMinnesotaWild, not updated, 0.0800000000000054<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -222,7 +222,7 @@ Hungary_TocoskertsArrows2 kihagyva (100%), <br />
 Hungary_TocoskertsArrows3, not updated, 0.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, -1.0<br />
+Hungary_FlatDebrecen, not updated, 0.0<br />
 Hungary_Debrecen2202, not updated, 0.0<br />
 Hungary_EvolutionDebrecen kihagyva (100%), <br />
 Hungary_JewelSandwich, not updated, 0.0<br />
@@ -692,7 +692,7 @@ Australia_FlatsFlyAKite kihagyva (100%), <br />
 Australia_SouthernCrossKite kihagyva (100%), <br />
 Australia_ToowoombaRose, not updated, 0.0<br />
 Australia_SnowBeeMelting kihagyva (100%), <br />
-USA_CelticSnake, <b>updated</b>, 84, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
+USA_CelticSnake, not updated, 0.0<br />
 Australia_AE2Submarine kihagyva (100%), <br />
 Australia_AussiePossum kihagyva (100%), <br />
 USA_ArizonaCactus kihagyva (100%), <br />
@@ -749,173 +749,4 @@ UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare kihagyva (100%), <br />
 Portugal_Saab9xInMadeira, not updated, 0.0<br />
-Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
-USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
-USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
-UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
-USA_SpyTrain kihagyva (100%), <br />
-USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
-USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass kihagyva (100%), <br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
-USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
-USA_EllisCreekOwl kihagyva (100%), <br />
-USA_EllisCreekOwlFlats, not updated, 0.0<br />
-USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
-USA_GardenGirl kihagyva (100%), <br />
-USA_TexasGoldenTicket kihagyva (100%), <br />
-USA_TexasGoldenTicketFlats, not updated, 0.0<br />
-USA_MarshallMallard kihagyva (100%), <br />
-USA_UncutDiamond kihagyva (100%), <br />
-USA_UncutDiamondFlats kihagyva (100%), <br />
-USA_BabyGroot kihagyva (100%), <br />
-USA_WeatherfordXmasOwl kihagyva (100%), <br />
-USA_AvocatoAvocato kihagyva (100%), <br />
-USA_AvocatoToy, not updated, 0.0<br />
-USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
-USA_BundtiniTrail kihagyva (100%), <br />
-USA_JewelOfAHeart kihagyva (100%), <br />
-USA_LetsTalkAbundtLove kihagyva (100%), <br />
-USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown kihagyva (100%), <br />
-USA_VelmaCrossbow, not updated, 0.0<br />
-USA_Shaggy, not updated, 0.0<br />
-USA_MysteryMachine, not updated, 0.0<br />
-USA_FortWorthFighterJet, not updated, 0.0<br />
-USA_TCUHornedFrogs, not updated, 0.0<br />
-USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.4900000000000091<br />
-USA_TexasGeowoodstock2019 kihagyva (100%), <br />
-USA_FortWorthSucculents kihagyva (100%), <br />
-USA_RobVsMatt, not updated, 0.0<br />
-USA_BrightColoredHorse, not updated, 0.0<br />
-USA_BrightColoredHorseFlats, not updated, 0.0<br />
-USA_RuhRohRAGGY, not updated, 0.0<br />
-USA_PrizeWheel kihagyva (100%), <br />
-USA_EvoHedgehog kihagyva (100%), <br />
-USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, not updated, 0.35999999999999943<br />
-USA_GreenvillesAmethystRoad kihagyva (100%), <br />
-USA_SaintMarysHeart kihagyva (100%), <br />
-USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
-USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
-USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
-USA_GreenvilleZodiacWheels kihagyva (100%), <br />
-USA_GreenvilleRUMCircle, not updated, 0.0<br />
-USA_GreenvilleFlatSurprise, not updated, 0.0<br />
-USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
-USA_GreenvilleSouthCarolina, not updated, 0.0<br />
-USA_JaysvilleFlatCircles, not updated, 0.0<br />
-USA_CCTXZeeCret, not updated, 0.0<br />
-USA_DecaturHearts kihagyva (100%), <br />
-USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
-UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
-UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
-USA_ScoobyDooCrossbow, not updated, 0.0<br />
-USA_TexasStateFlag kihagyva (100%), <br />
-USA_Geowoodstock2019 kihagyva (100%), <br />
-USA_MansfieldMuru, not updated, 0.0<br />
-USA_CedarRapidsIAFlag, not updated, 0.0<br />
-Hungary_JewelAndColor kihagyva (100%), <br />
-USA_CRMunzee6thBirthday kihagyva (100%), <br />
-USA_CRAirMysteryTrail kihagyva (100%), <br />
-USA_CRMunzFit20 kihagyva (100%), <br />
-USA_HayesBattlefield kihagyva (100%), <br />
-USA_CREgyptianZodiac kihagyva (100%), <br />
-USA_CherryBombCedarRapids kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
-USA_GCandyCane kihagyva (100%), <br />
-USA_GCandyCaneFlats, not updated, 0.0<br />
-USA_GShamrock kihagyva (100%), <br />
-USA_GShamrockFlats, not updated, 0.3500000000000014<br />
-USA_GPumpkin kihagyva (100%), <br />
-USA_GPumpkinFlats, not updated, 0.0<br />
-USA_Mauhaus kihagyva (100%), <br />
-USA_GToyotaCrossbows, not updated, 0.0<br />
-USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
-USA_GToyota kihagyva (100%), <br />
-USA_GToyotaFlats, not updated, 0.0<br />
-USA_GJewelBelt, not updated, 0.20999999999999375<br />
-USA_GEvoBelt, not updated, 0.0<br />
-USA_GBypassMixed, not updated, 0.0<br />
-USA_G62WestEvo, not updated, 0.33000000000000007<br />
-USA_NoelridgeMysteryFlats kihagyva (100%), <br />
-USA_GSouthland, not updated, 0.1999999999999993<br />
-USA_GMorning, not updated, 0.0<br />
-USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.21000000000000085<br />
-USA_PotOfGold, not updated, 0.0<br />
-USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.030000000000001137<br />
-USA_OwensboroRiverboatFlats, not updated, 0.0<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
-Netherlands_RobAndLouise kihagyva (100%), <br />
-USA_TaylorSwiftTheEras, not updated, 0.0<br />
-USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, not updated, 0.0<br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.0<br />
-USA_CelticKnot, not updated, 0.5900000000000034<br />
-USA_STLPirateShip, not updated, 0.0<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.0<br />
-USA_STLPokeball, not updated, 0.0<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.0<br />
-USA_Woodpecker, not updated, 0.0<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-----témák<br />
-----felhasználók update<br />
-Waves117_all, <b>updated</b>, <a href="https://www.munzee.com/map/u122rjm0e/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Waves117_all.json" target="_blank">json</a><br />
-Waves117_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u12vhk7nm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Waves117_GOTM.json" target="_blank">json</a><br />
-Waves117_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u12vjk6d6/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Waves117_completed.json" target="_blank">json</a><br />
-Waves117_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u12v5ubbu/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Waves117_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.02.23 13:44:44<br />
-összesen 2165<br />
+Netherlands_FlashEilandVanDeMeijer, <b>updated</b>, 127, <a href="https://www.munzee.com/map/u14gb5my1/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_FlashEilandVanDeMeijer.json" target="_blank">json</a><br />
