--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.02.27 01:10:11<br />
+<b>start</b> - 2023.02.28 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.9661835748792278<br />
-USA_Turtle, <b>updated</b>, 708, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
+USA_Turtle, not updated, 0.0<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.8800000000000097<br />
 Lithuania_KaunasBasketball, not updated, 0.29999999999999716<br />
@@ -274,7 +274,7 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.0<br />
-Germany_GeorgeTheFab42, not updated, 0.7899999999999991<br />
+Germany_GeorgeTheFab42, not updated, 0.8599999999999994<br />
 Germany_PaulTheFab43, not updated, 1.0<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
@@ -566,7 +566,7 @@ USA_IowaGoldfinch kihagyva (100%), <br />
 USA_Minion kihagyva (100%), <br />
 USA_FarmingtonTiger, not updated, 0.0<br />
 USA_CedarRapidsPumpkin kihagyva (100%), <br />
-USA_PuppyPlayPen, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_PuppyPlayPen, not updated, 0.0<br />
 USA_Burger kihagyva (100%), <br />
 USA_Pizza kihagyva (100%), <br />
 USA_StormtrooperSavage kihagyva (100%), <br />
@@ -692,7 +692,7 @@ Australia_FlatsFlyAKite kihagyva (100%), <br />
 Australia_SouthernCrossKite kihagyva (100%), <br />
 Australia_ToowoombaRose, not updated, 0.0<br />
 Australia_SnowBeeMelting kihagyva (100%), <br />
-USA_CelticSnake, <b>updated</b>, 93, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
+USA_CelticSnake, not updated, 0.6329113924050773<br />
 Australia_AE2Submarine kihagyva (100%), <br />
 Australia_AussiePossum kihagyva (100%), <br />
 USA_ArizonaCactus kihagyva (100%), <br />
@@ -749,168 +749,4 @@ UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare kihagyva (100%), <br />
 Portugal_Saab9xInMadeira, not updated, 0.0<br />
-Netherlands_FlashEilandVanDeMeijer, not updated, 0.0<br />
-USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
-USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
-UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
-USA_SpyTrain kihagyva (100%), <br />
-USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
-USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass kihagyva (100%), <br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
-USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
-USA_EllisCreekOwl kihagyva (100%), <br />
-USA_EllisCreekOwlFlats, not updated, 0.0<br />
-USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
-USA_GardenGirl kihagyva (100%), <br />
-USA_TexasGoldenTicket kihagyva (100%), <br />
-USA_TexasGoldenTicketFlats, not updated, 0.0<br />
-USA_MarshallMallard kihagyva (100%), <br />
-USA_UncutDiamond kihagyva (100%), <br />
-USA_UncutDiamondFlats kihagyva (100%), <br />
-USA_BabyGroot kihagyva (100%), <br />
-USA_WeatherfordXmasOwl kihagyva (100%), <br />
-USA_AvocatoAvocato kihagyva (100%), <br />
-USA_AvocatoToy, not updated, 0.0<br />
-USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
-USA_BundtiniTrail kihagyva (100%), <br />
-USA_JewelOfAHeart kihagyva (100%), <br />
-USA_LetsTalkAbundtLove kihagyva (100%), <br />
-USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown kihagyva (100%), <br />
-USA_VelmaCrossbow, not updated, 0.0<br />
-USA_Shaggy, not updated, 0.0<br />
-USA_MysteryMachine, not updated, 0.0<br />
-USA_FortWorthFighterJet, not updated, 0.0<br />
-USA_TCUHornedFrogs, not updated, 0.0<br />
-USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.4900000000000091<br />
-USA_TexasGeowoodstock2019 kihagyva (100%), <br />
-USA_FortWorthSucculents kihagyva (100%), <br />
-USA_RobVsMatt, not updated, 0.0<br />
-USA_BrightColoredHorse, not updated, 0.0<br />
-USA_BrightColoredHorseFlats, not updated, 0.0<br />
-USA_RuhRohRAGGY, not updated, 0.0<br />
-USA_PrizeWheel kihagyva (100%), <br />
-USA_EvoHedgehog kihagyva (100%), <br />
-USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, not updated, 0.39000000000000057<br />
-USA_GreenvillesAmethystRoad kihagyva (100%), <br />
-USA_SaintMarysHeart kihagyva (100%), <br />
-USA_GreenvilleOhioSpiritTrophy, not updated, 1.0<br />
-USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
-USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
-USA_GreenvilleZodiacWheels kihagyva (100%), <br />
-USA_GreenvilleRUMCircle, not updated, 0.0<br />
-USA_GreenvilleFlatSurprise, not updated, 0.0<br />
-USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
-USA_GreenvilleSouthCarolina, not updated, 0.0<br />
-USA_JaysvilleFlatCircles, not updated, 0.0<br />
-USA_CCTXZeeCret kihagyva (100%), <br />
-USA_DecaturHearts kihagyva (100%), <br />
-USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
-UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
-UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
-USA_ScoobyDooCrossbow, not updated, 0.0<br />
-USA_TexasStateFlag kihagyva (100%), <br />
-USA_Geowoodstock2019 kihagyva (100%), <br />
-USA_MansfieldMuru, not updated, 0.0<br />
-USA_CedarRapidsIAFlag, not updated, 0.0<br />
-Hungary_JewelAndColor kihagyva (100%), <br />
-USA_CRMunzee6thBirthday kihagyva (100%), <br />
-USA_CRAirMysteryTrail kihagyva (100%), <br />
-USA_CRMunzFit20 kihagyva (100%), <br />
-USA_HayesBattlefield kihagyva (100%), <br />
-USA_CREgyptianZodiac kihagyva (100%), <br />
-USA_CherryBombCedarRapids kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
-USA_GCandyCane kihagyva (100%), <br />
-USA_GCandyCaneFlats, not updated, 0.0<br />
-USA_GShamrock kihagyva (100%), <br />
-USA_GShamrockFlats, not updated, 0.3500000000000014<br />
-USA_GPumpkin kihagyva (100%), <br />
-USA_GPumpkinFlats, not updated, 0.0<br />
-USA_Mauhaus kihagyva (100%), <br />
-USA_GToyotaCrossbows, not updated, 0.0<br />
-USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
-USA_GToyota kihagyva (100%), <br />
-USA_GToyotaFlats, not updated, 0.0<br />
-USA_GJewelBelt, not updated, 0.20999999999999375<br />
-USA_GEvoBelt, not updated, 0.1700000000000017<br />
-USA_GBypassMixed, not updated, 0.0<br />
-USA_G62WestEvo, not updated, 0.33000000000000007<br />
-USA_NoelridgeMysteryFlats kihagyva (100%), <br />
-USA_GSouthland, not updated, 0.1999999999999993<br />
-USA_GMorning, not updated, 0.0<br />
-USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.21000000000000085<br />
-USA_PotOfGold, not updated, 0.0<br />
-USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.060000000000002274<br />
-USA_OwensboroRiverboatFlats, not updated, 0.0<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
-Netherlands_RobAndLouise kihagyva (100%), <br />
-USA_TaylorSwiftTheEras, not updated, 0.0<br />
-USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, not updated, 0.0<br />
-USA_MaineWeatherBalloon, <b>updated</b>, 64, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.0<br />
-USA_CelticKnot, not updated, 0.8900000000000006<br />
-USA_STLPirateShip, not updated, 0.37999999999999545<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.0<br />
-USA_STLPokeball, not updated, 0.0<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.0<br />
-USA_Woodpecker, not updated, 0.0<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.02.27 02:01:25<br />
-összesen 3074<br />
+Netherlands_FlashEilandVanDeMeijer, <b>updated</b>, 118, <a href="https://www.munzee.com/map/u14gb5my1/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_FlashEilandVanDeMeijer.json" target="_blank">json</a><br />
